--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=gateway
 server.port=9000
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#路由转发
+#我们要转换的路由，如果有多个可以将以下代码复制多份，将routes的序号改为1.....
+spring.cloud.gateway.routes[0].id=system
+#要转换的路由的地址
+spring.cloud.gateway.routes[0].uri.=http://127.0.0.1:9001
+spring.cloud.gateway.routes[0].predicates[0].name=Path
+spring.cloud.gateway.routes[0].predicates[0].args[0]=/system/**
