--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?characterEncoding=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=courseimooc
 spring.datasource.password=994915zg
+
+#mapper文件的类路径
+mybatis.mapper-locations=classpath:/mapper/*.xml 
