--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=994915zg
 
 #mapper文件的类路径
 mybatis.mapper-locations=classpath:/mapper/*.xml 
+#打印执行的sql
+Logging.level.com.course.system.mapper=trace
