--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.cloud.gateway.routes[0].id=system
 spring.cloud.gateway.routes[0].uri.=http://127.0.0.1:9001
 spring.cloud.gateway.routes[0].predicates[0].name=Path
 spring.cloud.gateway.routes[0].predicates[0].args[0]=/system/**
+
+#路由转发
+#我们要转换的路由，如果有多个可以将以下代码复制多份，将routes的序号改为1.....
+spring.cloud.gateway.routes[1].id=business
+#要转换的路由的地址
+spring.cloud.gateway.routes[1].uri.=http://127.0.0.1:9002
+spring.cloud.gateway.routes[1].predicates[0].name=Path
+spring.cloud.gateway.routes[1].predicates[0].args[0]=/business/**
