--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -28,6 +28,10 @@
             <groupId>com.course</groupId>
             <artifactId>server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
