--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 				<artifactId>fastjson</artifactId>
 				<version>1.2.60</version>
 			</dependency>
+			<dependency>
+				<groupId>dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>1.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
