--- a/server/pom.xml
+++ b/server/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.29</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
